--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a href="/">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
 
       <nav>
         <ul>
@@ -16,16 +16,20 @@
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
+
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
+
       <section>
         <h2>Features</h2>
         <ul>
@@ -59,6 +63,7 @@
           </li>
         </ul>
       </section>
+
       <section>
         <h2>Our Team</h2>
         <ul>
@@ -85,8 +90,9 @@
         </ul>
       </section>
     </main>
+
     <footer>
-      <a href="/">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
